...
                    Button {
                        showCreateNote.toggle()
                    } label: {
                        Label("Create Note", systemImage: "square.and.pencil")
                            .labelStyle(.titleAndIcon)
                    }
                    .accessibilityIdentifier("CreateNoteViewButton")
                    .buttonStyle(.bordered)
                    .tint(.blue)
                    .bold()
                }
            }
            .popover(isPresented: $showCreateNote) {
...
